fix: Breaking out of boundaries

--- a/public/resources/style.css
+++ b/public/resources/style.css
@@ -28,9 +28,6 @@
 
 .cardBoard img {
     vertical-align: middle;
-}
-
-.cardboard .image img {
     max-width: 100%;
 }
 
